--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -309,5 +309,11 @@
         "property_concierge_property_description": "Оплатим счета или подготовим апартаменты к приезду.  Сдадим вашу недвижимость в аренду или закажем клининг пространства: выберите то, что Вам нужно.",
         "property_concierge_concierge_description": "Наши клиенты остаются довольны благодаря особому подходу и вниманию к деталям и запросам. Всё, что требуется для идеального путешествия клиентов Azur life будет организовано за Вас.",
         "property_concierge_submit_button": "Оставьте ваш запрос"
+    },
+
+    "concierge_first": {
+        "concierge_first_title": "Премиум консьерж-сервис для клиентов Azur Life",
+        "concierge_first_description": "Если Вы арендуете недвижимость с Azure Life, мы гарантируем высококлассный сервис для Вас и Ваших гостей. Всё, что требуется для идеального путешествия клиентов Azur life будет организовано за Вас: будь то организация индивидуальных экскурсий или резервация ресторанов.",
+        "concierge_first_submit_button": "Отправить запрос"
     }
 }
