--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -297,7 +297,7 @@
 
     "experience_block": {
         "experience_block_subtitle_property": "Managing your property",
-        "experience_block_subtitle_concierge": "Concierge service with a special approach"
+        "experience_block_subtitle_concierge": "concierge service"
     },
 
     "property_concierge": {
@@ -315,5 +315,11 @@
         "property_concierge_property_description": "We will pay the bills or prepare the apartment for arrival.  Let's rent out your property or order space cleaning: choose what you need.",
         "property_concierge_concierge_description": "Our customers are satisfied with our special approach and attention to detail and requests. Everything that is required for the perfect travel of Azur life customers will be organized for you.",
         "property_concierge_submit_button": "Leave your request"
+    },
+
+    "concierge_first": {
+        "concierge_first_title": "Premium concierge service for Azur Life customers",
+        "concierge_first_description": "If you rent a property with Azure Life, we guarantee a high-class service for you and your guests. Everything that is required for a perfect trip for Azur life customers will be organized for you: whether it is the organization of individual excursions or restaurant reservations.",
+        "concierge_first_submit_button": "Send a request"
     }
 }
