--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -330,5 +330,13 @@
         "fee_first_second_description": "для эксклюзивных мандатов и бывших клиентов",
         "fee_first_third_description": "парковка, гараж",
         "fee_first_fourth_description": "управление недвижимостью - цены в зависимости от задания."
+    },
+
+    "privacy_first": {
+        "privacy_first_title": "Политика конфиденциальности",
+        "privacy_first_paragrapgh_first": "Расположенная на склонах Кап Ферра в уединенном месте с захватывающим видом на море и в то же время всего в нескольких минутах ходьбы от деревни и гавани Сен-Жан-Кап-Ферра, эта вилла является одним из самых желанных объектов недвижимости на этом участке Французской Ривьеры.Современная и открытая планировка, вилла предлагает идеальные условия как для отдыха, так и для развлечений. Большие стеклянные окна и раздвижные двери наполняют комнаты естественным светом, обеспечивая гостям великолепный вид на море. С жилой площадью 1000 м2, расположенной на четырех этажах и обслуживаемой стеклянным лифтом, здесь достаточно места для проведения мероприятий или поиска тихого уголка для отдыха. Вилла располагает пятью роскошными спальнями с отдельными ванными комнатами и способна с комфортом разместить до 10 гостей.",
+        "privacy_first_paragrapgh_second": "Во всех номерах есть зоны отдыха, красивые ванные комнаты и развлекательные системы Bang & Olufsen. Седьмая спальня с двуспальной кроватью предназначена для персонала.",
+        "privacy_first_paragrapgh_third": "Вы прибываете на Лазурный берег, чтобы провести прекрасный отпуск со своей семьей, и вы не хотите тратить свое время на решение всех мелких проблем, связанных с вашей собственностью, которые накопились за время вашего отсутствия?",
+        "privacy_first_paragrapgh_fourth": "Расположенная на склонах Кап Ферра в уединенном месте с захватывающим видом на море и в то же время всего в нескольких минутах ходьбы от деревни и гавани Сен-Жан-Кап-Ферра, эта вилла является одним из самых желанных объектов недвижимости на этом участке Французской Ривьеры. Вилла располагает пятью роскошными спальнями с отдельными ванными комнатами, в которых могут с комфортом разместиться до 10 гостей. Во всех номерах есть зоны отдыха, красивые ванные комнаты и развлекательные системы Bang & Olufsen. Седьмая спальня с двуспальной кроватью доступна для персонала."
     }
 }
