--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -338,5 +338,27 @@
         "privacy_first_paragrapgh_second": "Во всех номерах есть зоны отдыха, красивые ванные комнаты и развлекательные системы Bang & Olufsen. Седьмая спальня с двуспальной кроватью предназначена для персонала.",
         "privacy_first_paragrapgh_third": "Вы прибываете на Лазурный берег, чтобы провести прекрасный отпуск со своей семьей, и вы не хотите тратить свое время на решение всех мелких проблем, связанных с вашей собственностью, которые накопились за время вашего отсутствия?",
         "privacy_first_paragrapgh_fourth": "Расположенная на склонах Кап Ферра в уединенном месте с захватывающим видом на море и в то же время всего в нескольких минутах ходьбы от деревни и гавани Сен-Жан-Кап-Ферра, эта вилла является одним из самых желанных объектов недвижимости на этом участке Французской Ривьеры. Вилла располагает пятью роскошными спальнями с отдельными ванными комнатами, в которых могут с комфортом разместиться до 10 гостей. Во всех номерах есть зоны отдыха, красивые ванные комнаты и развлекательные системы Bang & Olufsen. Седьмая спальня с двуспальной кроватью доступна для персонала."
+    },
+
+    "crumbs": {
+        "crumbs_title": "Главная страница",
+        "crumbs_title_sell": "Продажа",
+        "crumbs_title_rent": "Аренда",
+        "crumbs_title_sell_object": "Объект на продажу",
+        "crumbs_title_rent_object": "Объект в аренду",
+        "crumbs_title_about": "О нас",
+        "crumbs_title_property": "Передайте недвижимость в управление",
+        "crumbs_title_concierge": "Консьерж-сервис",
+        "crumbs_title_fee": "Наша комиссия",
+        "crumbs_title_privacy": "Политика конфиденциальности",
+        "crumbs_title_all": "Все объекты",
+        "crumbs_title_sell_objects": "Объекты на продажу",
+        "crumbs_title_rent_objects": "Объекты в аренду",
+        "crumbs_title_blog": "Блог",
+        "crumbs_title_join": "Присоединиться к нам",
+        "crumbs_title_buy-sell-rent": "Купить, продать, арендовать вместе с Azur Life",
+        "crumbs_title_expertise": "Экспертная оценка",
+        "crumbs_title_detailed_sell": "Продажа",
+        "crumbs_title_detailed_rent": "Аренда"
     }
 }
